example/secondfile/objects/RDS_Discount_Plans__c.object
<CustomObject>
    <description>RDS-DealHash-RDS-Contract Details-RDS-Discount Plans</description>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Discount Plans-Discount Amount</description>
        <label>Discount Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_ID__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Discount Plans-Discount Plan ID</description>
        <label>Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Contract_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Discount Plans-RDS-Contract Details</description>
        <label>RDS-Contract Details</label>
        <referenceTo>RDS_Contract_Details__c</referenceTo>
        <relationshipLabel>255</relationshipLabel>
        <relationshipName>X255</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS-Discount Plans</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>RDS-Discount Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Discount Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>